        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=36616
        Dvorak-Qwerty keyboard layout gives unexpected results in javascript keydown

        https://bugs.webkit.org/show_bug.cgi?id=36797
        For non-Roman layouts, keydown Event.keyCode is always 0

        * platform/cocoa/KeyEventCocoa.mm:
        (WebCore::windowsKeyCodeForKeyCode): This is now the primary function for determining
        Windows key code - there is no reason to round trip a virtual key code via character code to
        get Windows virtual key code, and this can't work for non-Roman alphabets.
        (WebCore::windowsKeyCodeForCharCode): Removed keys that are now handled in windowsKeyCodeForKeyCode(),
        only keeping those for which we don't have known key codes (yet?).

        * platform/mac/KeyEventMac.mm: (WebCore::windowsKeyCodeForKeyEvent): Added comments.



Canonical link: https://commits.webkit.org/48098@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56804 268f45cc-cd09-0410-ab3c-d52691b4dbfc